--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,18 +1,14 @@
 <section class="gallery">
   <div class="container">
     <h3 class="section-title visually-hidden">Ice cream gallery</h3>
-    <div class="gallery__image">
+    <div class="gallery-picture">
       <img
-        class="gallery__image--jpg"
+        class="gallery-picture__image"
         src="./images/gallery/brooke-lark@1x.jpg"
         alt="tasty and colorful ice-cream"
         srcset="images/gallery/brooke-lark@2x.jpg 2x"
+        
       />
-      <p>
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dignissimos, sapiente inventore
-        reiciendis ipsam mollitia, animi, optio velit eius necessitatibus itaque sequi labore iusto
-        reprehenderit enim blanditiis. Cupiditate quasi recusandae eius?
-      </p>
-    </div>
+         </div>
   </div>
 </section>
