--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -3,14 +3,14 @@
   <p class="products__label" id="100% natural">100% natural</p>
   <h2 class="products__title">products</h2>
   <ul class="products__list">
-  <div class="ice-cream">
+  <li class="products__item products__item--ice-cream">
     <h3 class="products__name">ice cream</h3>
     <p class="products__text">Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural stabilizer</p>
     <button class="products__button" type="button" data-modal-open>
       <svg width="40" height="16"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
     </button>
-  </div>
-  <div class="ice-coffee">
+  </li>
+  <li class="products__item products__item--ice-coffee">
     <h3 class="products__name">ice coffee</h3>
     <p class="products__text">
       Fragrant invigorating drink created from 100% natural ingredients without the use of
@@ -19,8 +19,8 @@
     <button class="products__button" type="button" data-modal-open>
       <svg width="40" height="16"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
     </button>
-  </div>
-  <div class="milkshakes">
+  </li>
+  <li class=" products__item products__item--milkshakes">
     <h3 class="products__name">milkshakes</h3>
     <p class="products__text">
       Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and other
@@ -29,7 +29,7 @@
     <button class="products__button" type="button" data-modal-open>
       <svg width="40" height="16"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
     </button>
-  </div>
+  </li>
   </ul>
   </div>
 </section>
