--- a/src/sass/partials/_products.scss
+++ b/src/sass/partials/_products.scss
@@ -83,6 +83,7 @@ ul {
     }
     @include desktop {
       font-size: 30px;
+      margin-top: 165px;
     }
   }
   &__text {
@@ -115,47 +116,60 @@ ul {
   }
 }
 
-.ice-cream {
+.products__item {
   width: 280px;
   height: 420px;
   border-radius: 24px;
   margin: 0 auto;
+  margin-top: 250px;
   margin-bottom: 60px;
-  background-color: #aec6a5;
   @include tablet {
     width: 224px;
     height: 548px;
   }
   @include desktop {
     width: 370px;
-    height: 719px;
+    height: 536px;
   }
 }
-.ice-coffee {
-  @extend .ice-cream;
+.products__item--ice-cream {
+  @extend.products__item;
+  background-color: #aec6a5;
+}
+.products__item--ice-coffee {
+  @extend .products__item;
   background-color: #efd478;
 }
-.milkshakes {
-  @extend .ice-cream;
+.products__item--milkshakes {
+  @extend .products__item;
   background-color: #d6936d;
 }
-.ice-cream::before {
-  content: url(../images/products/ice-cream_mobile@1x.png);
+.products__item--ice-cream::before {
+  content: '';
+  background-image: url(../images/products/ice-cream_mobile@1x.png);
   width: 200px;
   height: 200px;
-  border-radius: 100px;
+  border-radius: 50%;
+  position: absolute;
+  translate: 40% -50%;
 }
-.ice-coffee::before {
-  content: url(../images/products/ice-coffee_mobile@1x.png);
+.products__item--ice-coffee::before {
+  content: '';
+  background-image: url(../images/products/ice-coffee_mobile@1x.png);
   width: 200px;
   height: 200px;
-  border-radius: 100px;
+  border-radius: 50%;
+  position: absolute;
+  translate: 40% -50%;
 }
-.milkshakes::before {
-  content: url(../images/products/milkshakes_mobile@1x.png);
+.products__item--milkshakes::before {
+  content: '';
+  background-image: url(../images/products/milkshakes_mobile@1x.png);
   width: 200px;
   height: 200px;
-  border-radius: 100px;
+  border-radius: 50%;
+  position: absolute;
+  translate: 40% -50%;
 }
 .modal {
   position: relative;
