--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -1,20 +1,33 @@
 .footer {
   position: relative;
-  margin-bottom: 40px;
+  background-color: #84a278;
+  padding-bottom: 50px;
 
   @mixin tablet {
     @media screen and (min-width: 768px) {
       padding-bottom: 12px;
     }
 
-    @media screen and (min-width: 480px) {
-      margin-bottom: 60px;
+    @media screen and (min-width: 1200px) {
+      padding-bottom: 0;
+    }
+
+    &::after {
+      content: '';
+      display: block;
+      position: absolute;
+      width: 768px;
+      background-color: #e1e1e1;
+      stroke-width: 1px;
+      transform: translate(-50%);
+      height: 1px;
+      width: 1167px;
     }
   }
-
   .container {
     padding: 0 33px;
     margin: 0 auto;
+    max-width: 1200px;
 
     @media screen and (min-width: 768px) {
       max-width: 768px;
@@ -26,56 +39,68 @@
   }
 
   .footer__container {
-    margin-bottom: 50px;
+    margin-bottom: 60px;
 
     @media screen and (min-width: 768px) {
-      display: flex;
+      margin-bottom: 12px;
       justify-content: space-between;
-      margin-bottom: 50px;
+      display: flex;
     }
     @media screen and (min-width: 480px) {
-      max-width: 480px;
-      height: 372px;
-      display: flex;
+      margin-bottom: 24px;
     }
   }
 
   &__title {
-    color: #fcfcfc;
-    font-family: Montserrat;
-    font-size: 26px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    letter-spacing: 1.04px;
+    max-width: 260px;
+    letter-spacing: normal;
     text-transform: uppercase;
+    color: #fcfcfc;
+    font-size: 1.8rem;
+    font-weight: 700;
+    line-height: 1.22;
+
     @media screen and (min-width: 768px) {
       width: 352px;
       height: 57px;
       flex-direction: column;
+      flex-shrink: 0;
+      font-family: Montserrat;
+      font-size: 26px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+      letter-spacing: 1.04px;
+      text-transform: uppercase;
+      margin-bottom: 8px;
     }
     @media screen and (min-width: 480px) {
+      display: flex;
       width: 232px;
       height: 42px;
+      flex-direction: column;
+      flex-shrink: 0;
     }
   }
 
   &__title > span {
     display: block;
-    margin-top: 8px;
-    font-size: 48px;
+    font-size: 34px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    letter-spacing: 2.88px;
+    letter-spacing: 1.36px;
+    text-transform: uppercase;
+
     @media screen and (min-width: 768px) {
       display: flex;
       width: 352px;
       flex-direction: column;
+      letter-spacing: 2.88px;
     }
-    @media screen and (min-width: 480px) {
-      width: 200px;
-      height: 76px;
+    @media screen and (min-width: 1200px) {
+      width: 497x;
+      height: 71px;
       flex-direction: column;
     }
   }
@@ -84,15 +109,15 @@
     display: flex;
     justify-content: flex-end;
     gap: 30px;
-    margin-bottom: 34px;
+    margin-bottom: 40px;
+    list-style-type: none;
     @media screen and (min-width: 768px) {
       gap: 30px;
-      margin-top: 4px;
       margin-bottom: 34px;
     }
     @media screen and (min-width: 480px) {
       gap: 20px;
-      margin-top: 60px;
+      justify-content: flex-end;
       margin-bottom: 20px;
     }
   }
@@ -101,9 +126,11 @@
     transition-property: fill, background-color, border-radius;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transform: scale(1);
     border-radius: 50%;
-    fill: #f8d24e;
-    background-color: #84a278;
+    overflow: hidden;
+    background-color: #f8d24e;
+    fill: #84a278;
   }
 
   &__social-link {
@@ -111,24 +138,27 @@
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     border-radius: 50%;
+    cursor: pointer;
   }
+
   &__social-icon {
     display: block;
     width: 34px;
     height: 34px;
+    flex-shrink: 0;
   }
   &__contact {
     color: #131313;
     text-align: right;
-    font-family: Montserrat;
-    font-size: 14px;
-    font-style: normal;
     font-weight: 700;
     line-height: 1.86;
+    text-decoration: none;
+    text-align: right;
   }
 
   &__contact-link {
     color: #fcfcfc;
+    text-decoration: none;
   }
   &__copyright {
     color: #7a7a7a;
@@ -136,9 +166,9 @@
     font-size: 14px;
     font-style: normal;
     font-weight: 700;
-    line-height: 186%;
     letter-spacing: 0.28px;
     text-align: center;
+    margin: 0 auto;
     @media screen and (min-width: 768px) {
       margin-top: 12px;
       margin-bottom: 12px;
@@ -149,15 +179,5 @@
       margin-bottom: 24px;
       flex-wrap: wrap;
     }
-  }
-
-  &::after {
-    content: '';
-    display: block;
-    position: absolute;
-    width: 768px;
-    background-color: #e1e1e1;
-    stroke-width: 1px;
-    transform: translate(-50%);
   }
 }
