--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -154,6 +154,7 @@
     line-height: 1.86;
     text-decoration: none;
     text-align: right;
+    letter-spacing: normal;
   }
 
   &__contact-link {
