--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -230,6 +230,7 @@ body {
   line-height: 1.86;
   text-decoration: none;
   text-align: right;
+  letter-spacing: normal;
 }
 .footer__contact-link {
   color: #fcfcfc;
