--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="footer__container">
       <p class="footer__title">
-        "homemade ice cream made"
+        homemade ice cream made
         <span>with passion</span>
       </p>
       <div>
@@ -45,7 +45,7 @@
           </li>
         </ul>
         <p class="footer__contact">
-          "Feel free to contact"
+          Feel free to contact
           <a href="tel:+61 (0) 383 766 284" class="footer__contact-link"> +61 (0) 383 766 284</a>
         </p>
       </div>
@@ -53,5 +53,4 @@
 
     <p class="footer__copyright">© 2022 - IceCream. All Rights Reserved.</p>
   </div>
-  ::after
 </footer>
