--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -131,6 +131,8 @@
     overflow: hidden;
     background-color: #f8d24e;
     fill: #84a278;
+    width: 34px;
+    height: 34px;
   }
 
   &__social-link {
