--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -209,6 +209,8 @@ body {
   overflow: hidden;
   background-color: #f8d24e;
   fill: #84a278;
+  width: 34px;
+  height: 34px;
 }
 .footer__social-link {
   transition-property: fill, background-color, border-radius;
