--- a/src/sass/partials/_products.scss
+++ b/src/sass/partials/_products.scss
@@ -20,102 +20,117 @@ ul {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-
+  @media (min-device-pixel-ratio: 2),
+    (-webkit-min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: url(../images/Backgroud_mobile@2x.jpg);
+  }
   @include tablet {
     background-image: url(../images/Background_tablet@1x.jpg);
-  }
-  @include desktop {
-    background-image: url(../images/Backgroud_desktop@1x.jpg);
-  }
-
-  &__label {
-    color: #131313;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 800;
-    font-size: 18px;
-    line-height: 1.2;
-    text-transform: uppercase;
-    text-align: center;
-    padding-top: 60px;
-    @include tablet {
-      font-size: 22px;
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/Background_tablet@2x.jpg);
     }
     @include desktop {
+      background-image: url(../images/Backgroud_desktop@1x.jpg);
+      @media (min-device-pixel-ratio: 2),
+        (-webkit-min-device-pixel-ratio: 2),
+        (min-resolution: 192dpi),
+        (min-resolution: 2dppx) {
+        background-image: url(../images/Backgroud_desktop@2x.jpg);
+      }
+    }
+    &__label {
+      color: #131313;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 800;
+      font-size: 18px;
+      line-height: 1.2;
+      text-transform: uppercase;
+      text-align: center;
+      padding-top: 60px;
+      @include tablet {
+        font-size: 22px;
+      }
+      @include desktop {
+        font-size: 30px;
+      }
+    }
+    &__title {
+      color: $textBlack;
+      font-family: 'Seymour One', sans-serif;
+      font-weight: 400;
       font-size: 30px;
+      line-height: 1.26;
+      text-transform: uppercase;
+      text-align: center;
+      margin-top: 12px;
+      @include tablet {
+        font-size: 34px;
+      }
+      @include desktop {
+        font-size: 36px;
+      }
     }
-  }
-  &__title {
-    color: $textBlack;
-    font-family: 'Seymour One', sans-serif;
-    font-weight: 400;
-    font-size: 30px;
-    line-height: 1.26;
-    text-transform: uppercase;
-    text-align: center;
-    margin-top: 12px;
-    @include tablet {
-      font-size: 34px;
+    &__list {
+      @include tablet {
+        display: flex;
+        gap: 16px;
+      }
+      @include desktop {
+        display: flex;
+        gap: 29px;
+      }
     }
-    @include desktop {
-      font-size: 36px;
+    &__name {
+      color: $textBlack;
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 700;
+      font-size: 20px;
+      line-height: 1.22;
+      text-transform: uppercase;
+      text-align: center;
+      @include tablet {
+        font-size: 22px;
+      }
+      @include desktop {
+        font-size: 30px;
+        margin-top: 165px;
+      }
     }
-  }
-  &__list {
-    @include tablet {
-      display: flex;
-      gap: 16px;
+    &__text {
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 1.77;
+      letter-spacing: 0.04em;
+      text-align: center;
+      margin-top: 40px;
+      @include desktop {
+        font-size: 16px;
+        margin-top: 66px;
+        width: 242px;
+        margin: 0 auto;
+      }
+      @include tablet {
+        width: 172px;
+        margin: 0 auto;
+      }
     }
-    @include desktop {
-      display: flex;
-      gap: 29px;
-    }
-  }
-  &__name {
-    color: $textBlack;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.22;
-    text-transform: uppercase;
-    text-align: center;
-    @include tablet {
-      font-size: 22px;
-    }
-    @include desktop {
-      font-size: 30px;
-      margin-top: 165px;
-    }
-  }
-  &__text {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.77;
-    letter-spacing: 0.04em;
-    text-align: center;
-    margin-top: 40px;
-    @include desktop {
-      font-size: 16px;
-      margin-top: 66px;
-      width: 242px;
-      margin: 0 auto;
-    }
-    @include tablet {
-      width: 172px;
-      margin: 0 auto;
-    }
-  }
 
-  &__button {
-    background: none;
-    border: none;
-    margin: 0 auto;
-    display: flex;
-    justify-content: flex-end;
-    cursor: pointer;
+    &__button {
+      background: none;
+      border: none;
+      margin: 0 auto;
+      display: flex;
+      justify-content: flex-end;
+      cursor: pointer;
+    }
   }
 }
-
 .products__item {
   width: 280px;
   height: 420px;
@@ -131,48 +146,60 @@ ul {
     width: 370px;
     height: 536px;
   }
+  &--ice-cream {
+    background-color: #aec6a5;
+  }
+  &--ice-coffee {
+    background-color: #efd478;
+  }
+  &--milkshakes {
+    background-color: #d6936d;
+  }
 }
-.products__item--ice-cream {
-  @extend.products__item;
-  background-color: #aec6a5;
-}
-.products__item--ice-coffee {
-  @extend .products__item;
-  background-color: #efd478;
-}
-.products__item--milkshakes {
-  @extend .products__item;
-  background-color: #d6936d;
-}
-.products__item--ice-cream::before {
-  content: '';
-  background-image: url(../images/products/ice-cream_mobile@1x.png);
+.ice-cream {
   width: 200px;
   height: 200px;
   border-radius: 50%;
   position: absolute;
   translate: 40% -50%;
 }
-.products__item--ice-coffee::before {
-  content: '';
-  background-image: url(../images/products/ice-coffee_mobile@1x.png);
+.ice-cream::before {
+  box-shadow: 0 8px 30px rgba(10, 136, 23, 0.25);
+  background-image: linear-gradient(rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7));
+}
+.ice-coffee {
   width: 200px;
   height: 200px;
   border-radius: 50%;
   position: absolute;
   translate: 40% -50%;
 }
-.products__item--milkshakes::before {
-  content: '';
-  background-image: url(../images/products/milkshakes_mobile@1x.png);
+.ice-coffee::before {
+  box-shadow: 0 8px 30px rgba(153, 114, 23, 0.25);
+  background-image: linear-gradient(rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7));
+}
+.milkshakes {
   width: 200px;
   height: 200px;
   border-radius: 50%;
   position: absolute;
   translate: 40% -50%;
 }
-.modal {
-  position: relative;
+.milkshakes::before {
+  box-shadow: 0 8px 30px rgba(0, 0, 0, 0.25);
+  background-image: linear-gradient(rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7));
+}
+.backdrop {
+  position: fixed;
+  inset: 0;
+  z-index: 9999;
+  cursor: not-allowed;
+  transform: scale(1);
+  background-color: #00000033;
+}
+.products-modal {
+  position: fixed;
+  inset: 0;
   margin: auto;
   background-color: $textWhite;
   border: 2px solid $secondaryBrandColor;
@@ -329,7 +356,7 @@ ul {
     color: #131313;
   }
 }
-.modal__form {
+.products-modal__form {
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -343,7 +370,7 @@ ul {
     margin-top: 48px;
   }
 }
-.modal__input {
+.products-modal__input {
   font-weight: 400;
   font-family: 'Montserrat', sans-serif;
   width: 240px;
@@ -354,15 +381,14 @@ ul {
   border: 1px solid $firstBrandColor;
   border-radius: 10px;
 }
-.modal__feedback {
-  @extend .modal__input;
+.products-modal__feedback {
+  @extend .products-modal__input;
   height: 84px;
   resize: none;
 }
-
-/*.is-hidden {
+.products-is-hidden {
   pointer-events: none;
-  visibility: hidden;
+  visibility: none;
   opacity: 0;
-  scale: 0;
-}*/
+  transform: scale(0);
+}
