--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,14 +1,28 @@
 <section class="gallery">
   <div class="container">
-    <h3 class="section-title visually-hidden">Ice cream gallery</h3>
-    <div class="gallery-picture">
+    <h3 class="section-title visually-hidden">Ice cream gallery</h3>    
+    <div class="loop">
       <img
-        class="gallery-picture__image"
-        src="./images/gallery/brooke-lark@1x.jpg"
+        class="loop__image"
+        src="./images/gallery/brooke-lark@1x.webp"
         alt="tasty and colorful ice-cream"
-        srcset="images/gallery/brooke-lark@2x.jpg 2x"
-        
+        srcset="images/gallery/brooke-lark@2x.webp 2x"
+        fetchpriority="high"        
       />
-         </div>
+      <img
+        class="loop__image"
+        src="./images/gallery/courtney-cook@1x.webp"
+        alt="tasty and colorful ice-cream"
+        srcset="images/gallery/courtney-cook@2x.webp 2x"        
+      />
+      <img
+        class="loop__image"
+        src="./images/gallery/unsplash@1x.webp"
+        alt="tasty and colorful ice-cream"
+        srcset="images/gallery/unsplash@2x.webp 2x"        
+      />
+
+    </div>
   </div>
+  
 </section>
