--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -41,7 +41,7 @@
   <div class="modalSignup">
     <button type="button" class="close-btn" data-modal-close>
         <svg class="xclose" width="20px" height="20px">
-          <use href="../images/icons-ice_cream.svg#icon-icon-close"></use>
+          <use href="./images/icons-ice_cream.svg#icon-icon-close"></use>
         </svg>
       </button>
 
