Last tweaks/fixes

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about">
+<section class="about" id="about">
   <div class="container">
     <div class="about__header-container">
       <p class="about__label">tradition and love</p>
@@ -18,6 +18,7 @@
             ./images/about/cow-photo-660w.webp 660w,
             ./images/about/cow-photo-980w.webp 980w
           "
+          sizes="(min-width: 1200px) 500px, (min-width: 768px) 330px, 100vw"
         />
       </div>
       <div class="about__txt-and-btn-container">
@@ -32,7 +33,7 @@
         </p>
         <p class="about__texts">This is enough to choose ice cream and coffee for any mood!</p>
 
-        <button about-data-modal-open class="about__read-more-btn" type="button">
+        <button about-data-modal-open class="about__read-more-btn">
           Read more
           <svg class="about__read-more-btn--svg">
             <line x1="0" y1="0" x2="5" y2="5.5" stroke-width="2" />
@@ -57,7 +58,6 @@
         class="read-more-modal__video"
         src="https://www.youtube.com/embed/7gJIyHnD710"
         title="7 Easy Homemade Ice Cream Recipes"
-        frameborder="0"
         allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
         allowfullscreen
       ></iframe>
