--- a/src/sass/partials/_about.scss
+++ b/src/sass/partials/_about.scss
@@ -169,6 +169,7 @@
   z-index: 9999;
   cursor: not-allowed;
   transform: scale(1);
+  background-color: #00000033;
 }
 .read-more-modal {
   position: fixed;
@@ -216,6 +217,7 @@
     width: 100%;
     height: 100%;
     border-radius: 10px;
+    border: none;
   }
   &__text {
     font-family: 'Montserrat', sans-serif;
