--- a/src/sass/partials/_contacts.scss
+++ b/src/sass/partials/_contacts.scss
@@ -1,19 +1,98 @@
+@import '../mixins';
+@import './vars';
+
 .contacts {
-    
-&__list {
+  background-color: #84a178;
+
+  &__wrapper {
     display: flex;
     flex-direction: column;
-}
-&__item {
+
+    @include tablet {
+      flex-direction: row;
+    }
+    @include desktop {
+      flex-direction: row;
+    }
+  }
+  &__header {
+    display: block;
+    background-color: #f8d24e;
+    border-radius: 6px;
+    margin-left: 40px;
+    margin-top: 40px;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.2;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+
+    @include tablet {
+      padding: 4px 13px;
+      font-size: 16px;
+    }
+    @include desktop {
+      padding: 4px 14px;
+      line-height: 1.4;
+      font-size: 16px;
+    }
+  }
+  &__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+
+    @include tablet {
+      display: flex;
+      flex-direction: row;
+      gap: 16px;
+    }
+    @include desktop {
+      flex-direction: row;
+      gap: 32px;
+    }
+  }
+  &__item {
     width: 280px;
     height: 412px;
     border-radius: 10px;
-    border-color: #FCFCFC;
+    background-color: #fcfcfc;
 
-    @include desktop {
-        display: flex;
-        flex-direction: row;
+    @include tablet {
+      width: 224px;
+      height: 537px;
     }
+    @include desktop {
+      width: 368px;
+      height: 542px;
+    }
+  }
+}
+.modalSignup__form {
+  position: absolute;
+  width: calc(100% - 30px);
+  max-width: 450px;
+  height: auto;
+  background-color: #84a178;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 4px;
 }
 
+.backdrop {
+  position: fixed;
+  opacity: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  visibility: visible;
+}
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
