--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -14,7 +14,7 @@
               rel="nofollow noopener noreferrer"
               class="footer__social-link"
             >
-              <svg class="footer__social-icon">
+              <svg class="footer__social-icon" width="34" height="34">
                 <use href="./images/icons-ice_cream.svg#icon-github"></use>
               </svg>
             </a>
@@ -26,7 +26,7 @@
               rel="nofollow noopener noreferrer"
               class="footer__social-link"
             >
-              <svg class="footer__social-icon">
+              <svg class="footer__social-icon" width="34" height="34">
                 <use href="./images/icons-ice_cream.svg#icon-telegram"></use>
               </svg>
             </a>
@@ -38,7 +38,7 @@
               rel="nofollow noopener noreferrer"
               class="footer__social-link"
             >
-              <svg class="footer__social-icon">
+              <svg class="footer__social-icon" width="34" height="34">
                 <use href="./images/icons-ice_cream.svg#icon-facebook"></use>
               </svg>
             </a>
