--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -90,11 +90,13 @@ body {
   position: relative;
   background-color: #84a278;
   padding-bottom: 50px;
+  font-size: 12px;
 }
 .footer .container {
   padding: 0 33px;
   margin: 0 auto;
-  max-width: 1200px;
+  max-width: 480px;
+  padding: 0 22px;
 }
 @media screen and (min-width: 768px) {
   .footer .container {
@@ -102,58 +104,59 @@ body {
     padding: 0 33px;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 1200px) {
   .footer .container {
-    max-width: 480px;
+    max-width: 1200px;
+    padding: 0 16px;
   }
 }
 .footer .footer__container {
-  margin-bottom: 60px;
+  margin-bottom: 62px;
 }
 @media screen and (min-width: 768px) {
   .footer .footer__container {
-    margin-bottom: 12px;
-    justify-content: space-between;
+    margin-bottom: 38px;
+    justify-content: space-around;
     display: flex;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 1200px) {
   .footer .footer__container {
-    margin-bottom: 24px;
+    margin-bottom: 44px;
   }
 }
 .footer__title {
-  max-width: 260px;
+  max-width: 232px;
   letter-spacing: normal;
   text-transform: uppercase;
   color: #fcfcfc;
-  font-size: 1.8rem;
+  font-size: 18px;
   font-weight: 700;
   line-height: 1.22;
+  margin-bottom: 16px;
+  text-align: left;
 }
 @media screen and (min-width: 768px) {
   .footer__title {
     width: 352px;
-    height: 57px;
     flex-direction: column;
-    flex-shrink: 0;
-    font-family: Montserrat;
     font-size: 26px;
     font-style: normal;
-    font-weight: 700;
     line-height: normal;
     letter-spacing: 1.04px;
-    text-transform: uppercase;
     margin-bottom: 8px;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 1200px) {
   .footer__title {
     display: flex;
-    width: 232px;
-    height: 42px;
-    flex-direction: column;
-    flex-shrink: 0;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: normal;
+    letter-spacing: 1.2px;
+    text-transform: uppercase;
+    margin-bottom: 14px;
+    text-align: left;
   }
 }
 .footer__title > span {
@@ -164,28 +167,43 @@ body {
   line-height: normal;
   letter-spacing: 1.36px;
   text-transform: uppercase;
+  width: 234px;
+  height: 134px;
+  text-align: left;
 }
 @media screen and (min-width: 768px) {
   .footer__title > span {
     display: flex;
-    width: 352px;
-    flex-direction: column;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
     letter-spacing: 2.88px;
+    width: 352px;
+    height: 183px;
+    text-align: left;
   }
 }
 @media screen and (min-width: 1200px) {
   .footer__title > span {
-    width: 497x;
-    height: 71px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 3.48px;
     flex-direction: column;
+    font-size: 58px;
+    width: 504px;
+    height: 122px;
+    text-align: left;
   }
 }
 .footer__social-list {
   display: flex;
   justify-content: flex-end;
-  gap: 30px;
-  margin-bottom: 40px;
+  gap: 20px;
+  margin-bottom: 20px;
   list-style-type: none;
+  margin-top: auto;
 }
 @media screen and (min-width: 768px) {
   .footer__social-list {
@@ -193,11 +211,12 @@ body {
     margin-bottom: 34px;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 1200px) {
   .footer__social-list {
-    gap: 20px;
+    gap: 30px;
     justify-content: flex-end;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
+    margin-top: 138px;
   }
 }
 .footer__social-item {
@@ -218,12 +237,14 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 50%;
   cursor: pointer;
+  background-color: #f8d24e;
+  fill: #84a278;
 }
 .footer__social-icon {
   display: block;
-  width: 34px;
-  height: 34px;
   flex-shrink: 0;
+  background-color: #f8d24e;
+  fill: #84a278;
 }
 .footer__contact {
   color: #131313;
@@ -233,6 +254,7 @@ body {
   text-decoration: none;
   text-align: right;
   letter-spacing: normal;
+  font-size: 12px;
 }
 .footer__contact-link {
   color: #fcfcfc;
