--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -2,10 +2,12 @@
   position: relative;
   background-color: #84a278;
   padding-bottom: 50px;
+  font-size: 12px;
 
   @mixin tablet {
     @media screen and (min-width: 768px) {
       padding-bottom: 12px;
+      font-size: 14px;
     }
 
     @media screen and (min-width: 1200px) {
@@ -27,59 +29,61 @@
   .container {
     padding: 0 33px;
     margin: 0 auto;
-    max-width: 1200px;
+    max-width: 480px;
+    padding: 0 22px;
 
     @media screen and (min-width: 768px) {
       max-width: 768px;
       padding: 0 33px;
     }
-    @media screen and (min-width: 480px) {
-      max-width: 480px;
+    @media screen and (min-width: 1200px) {
+      max-width: 1200px;
+      padding: 0 16px;
     }
   }
 
   .footer__container {
-    margin-bottom: 60px;
+    margin-bottom: 62px;
 
     @media screen and (min-width: 768px) {
-      margin-bottom: 12px;
-      justify-content: space-between;
+      margin-bottom: 38px;
+      justify-content: space-around;
       display: flex;
     }
-    @media screen and (min-width: 480px) {
-      margin-bottom: 24px;
+    @media screen and (min-width: 1200px) {
+      margin-bottom: 44px;
     }
   }
 
   &__title {
-    max-width: 260px;
+    max-width: 232px;
     letter-spacing: normal;
     text-transform: uppercase;
     color: #fcfcfc;
-    font-size: 1.8rem;
+    font-size: 18px;
     font-weight: 700;
     line-height: 1.22;
+    margin-bottom: 16px;
+    text-align: left;
 
     @media screen and (min-width: 768px) {
       width: 352px;
-      height: 57px;
       flex-direction: column;
-      flex-shrink: 0;
-      font-family: Montserrat;
       font-size: 26px;
       font-style: normal;
-      font-weight: 700;
       line-height: normal;
       letter-spacing: 1.04px;
-      text-transform: uppercase;
       margin-bottom: 8px;
     }
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 1200px) {
       display: flex;
-      width: 232px;
-      height: 42px;
-      flex-direction: column;
-      flex-shrink: 0;
+      font-weight: 400;
+      font-size: 30px;
+      line-height: normal;
+      letter-spacing: 1.2px;
+      text-transform: uppercase;
+      margin-bottom: 14px;
+      text-align: left;
     }
   }
 
@@ -91,34 +95,51 @@
     line-height: normal;
     letter-spacing: 1.36px;
     text-transform: uppercase;
+    width: 234px;
+    height: 134px;
+    text-align: left;
 
     @media screen and (min-width: 768px) {
       display: flex;
-      width: 352px;
-      flex-direction: column;
+      font-size: 48px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
       letter-spacing: 2.88px;
+      width: 352px;
+      height: 183px;
+      text-align: left;
     }
     @media screen and (min-width: 1200px) {
-      width: 497x;
-      height: 71px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
+      letter-spacing: 3.48px;
       flex-direction: column;
+      font-size: 58px;
+      width: 504px;
+      height: 122px;
+      text-align: left;
     }
   }
 
   &__social-list {
     display: flex;
     justify-content: flex-end;
-    gap: 30px;
-    margin-bottom: 40px;
+    gap: 20px;
+    margin-bottom: 20px;
     list-style-type: none;
+    margin-top: auto;
+
     @media screen and (min-width: 768px) {
       gap: 30px;
       margin-bottom: 34px;
     }
-    @media screen and (min-width: 480px) {
-      gap: 20px;
+    @media screen and (min-width: 1200px) {
+      gap: 30px;
       justify-content: flex-end;
-      margin-bottom: 20px;
+      margin-bottom: 40px;
+      margin-top: 138px;
     }
   }
 
@@ -141,13 +162,15 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     border-radius: 50%;
     cursor: pointer;
+    background-color: #f8d24e;
+    fill: #84a278;
   }
 
   &__social-icon {
     display: block;
-    width: 34px;
-    height: 34px;
     flex-shrink: 0;
+    background-color: #f8d24e;
+    fill: #84a278;
   }
   &__contact {
     color: #131313;
@@ -157,6 +180,7 @@
     text-decoration: none;
     text-align: right;
     letter-spacing: normal;
+    font-size: 12px;
   }
 
   &__contact-link {
