--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,117 +1,213 @@
 <section class="products" id="products">
   <div class="container">
-  <p class="products__label" id="100% natural">100% natural</p>
-  <h2 class="products__title">products</h2>
-  <ul class="products__list">
-  <li class="products__item products__item--ice-cream">
-    <div class="ice-cream"> 
-      <picture>
-    <img class="ice-cream__img" alt="gałki lodów" 
-      src="./images/products/ice-cream_mobile@1x.png"/> 
-      <source srcset="./images/products/ice-cream_mobile@1x.png 1x, ./images/products/ice-cream_mobile@2x.png 2x" media="(min-width:480px)"/>
-      <source srcset="./images/products/ice-cream_tablet@1x.png 1x, ./images/products/ice-cream_tablet@2x.png 2x" media="(min-width:768px)"/> 
-      <source srcset="./images/products/ice-cream_desktop@1x.png 1x, ./images/products/ice-cream_desktop@2x.png 2x" media="(min-width:1200px)"/>
-    </picture>
-  </div>
-    <h3 class="products__name">ice cream</h3>
-    <p class="products__text">Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural stabilizer</p>
-    <button class="products__button" type="button" products-data-modal-open>
-      <svg width="40" height="16"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
-    </button>
-  </li>
-  <li class="products__item products__item--ice-coffee">
-    <div class="ice-coffee">      
-      <picture>
-    <img class="ice-coffee__img" alt="kawa mrożona" 
-      src="./images/products/ice-coffee_mobile@1x.png"/> 
-      <source srcset="./images/products/ice-coffee_mobile@1x.png 1x, ./images/products/ice-coffee_mobile@2x.png 2x" media="(min-width:480px)"/>
-      <source srcset="./images/products/ice-coffee_tablet@1x.png 1x, ./images/products/ice-coffee_tablet@2x.png 2x" media="(min-width:768px)"/> 
-      <source srcset="./images/products/ice-coffee_desktop@1x.png 1x, ./images/products/ice-coffee_desktop@2x.png 2x" media="(min-width:1200px)"/>
-    </picture>
-  </div>
-    <h3 class="products__name">ice coffee</h3>
-    <p class="products__text">
-      Fragrant invigorating drink created from 100% natural ingredients without the use of
-      preservatives and flavor enhancers
-    </p>
-    <button class="products__button" type="button" products-data-modal-open>
-      <svg width="40" height="16"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
-    </button>
-  </li>
-  <li class=" products__item products__item--milkshakes">
-    <div class="milkshakes"> 
-           <picture>
-    <img class="milkshakes_img" alt="milkshake" 
-      src="./images/products/milkshakes_mobile@1x.png"/> 
-      <source srcset="./images/products/milkshakes_mobile@1x.png 1x, ./images/products/milkshakes_mobile@2x.png 2x" media="(min-width:480px)"/>
-      <source srcset="./images/products/milkshakes_tablet@1x.png 1x, ./images/products/milkshakes_tablet@2x.png 2x" media="(min-width:768px)"/> 
-      <source srcset="./images/products/milkshakes_desktop@1x.png 1x, ./images/products/milkshakes_desktop@2x.png 2x" media="(min-width:1200px)"/>
-    </picture>
-    </div>
-    <h3 class="products__name">milkshakes</h3>
-    <p class="products__text">
-      Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and other
-      sweets of your choice
-    </p>
-    <button class="products__button" type="button" products-data-modal-open>
-      <svg width="40" height="16"><use href="./images/icons-ice_cream.svg#icon-Arrow"></use></svg>
-    </button>
-  </li>
-  </ul>
+    <p class="products__label" id="100% natural">100% natural</p>
+    <h2 class="products__title">products</h2>
+    <ul class="products__list">
+      <li class="products__item products__item--ice-cream">
+        <div class="ice-cream">
+          <picture>
+            <img
+              class="ice-cream__img"
+              alt="gałki lodów"
+              src="./images/products/ice-cream_mobile@1x.png"
+            />
+            <source
+              srcset="
+                ./images/products/ice-cream_mobile@1x.png 1x,
+                ./images/products/ice-cream_mobile@2x.png 2x
+              "
+              media="(min-width:480px)"
+            />
+            <source
+              srcset="
+                ./images/products/ice-cream_tablet@1x.png 1x,
+                ./images/products/ice-cream_tablet@2x.png 2x
+              "
+              media="(min-width:768px)"
+            />
+            <source
+              srcset="
+                ./images/products/ice-cream_desktop@1x.png 1x,
+                ./images/products/ice-cream_desktop@2x.png 2x
+              "
+              media="(min-width:1200px)"
+            />
+          </picture>
+        </div>
+        <h3 class="products__name">ice cream</h3>
+        <div class="products__flex-container">
+          <p class="products__text">
+            Soft ice cream with a delicate taste. Made with milk, cream, sugar and natural
+            stabilizer
+          </p>
+          <button class="products__button" type="button" products-data-modal-open>
+            <svg width="40" height="16">
+              <use href="./images/icons-ice_cream.svg#icon-Arrow"></use>
+            </svg>
+          </button>
+        </div>
+      </li>
+      <li class="products__item products__item--ice-coffee">
+        <div class="ice-coffee">
+          <picture>
+            <img
+              class="ice-coffee__img"
+              alt="kawa mrożona"
+              src="./images/products/ice-coffee_mobile@1x.png"
+            />
+            <source
+              srcset="
+                ./images/products/ice-coffee_mobile@1x.png 1x,
+                ./images/products/ice-coffee_mobile@2x.png 2x
+              "
+              media="(min-width:480px)"
+            />
+            <source
+              srcset="
+                ./images/products/ice-coffee_tablet@1x.png 1x,
+                ./images/products/ice-coffee_tablet@2x.png 2x
+              "
+              media="(min-width:768px)"
+            />
+            <source
+              srcset="
+                ./images/products/ice-coffee_desktop@1x.png 1x,
+                ./images/products/ice-coffee_desktop@2x.png 2x
+              "
+              media="(min-width:1200px)"
+            />
+          </picture>
+        </div>
+        <h3 class="products__name">ice coffee</h3>
+        <div class="products__flex-container">
+          <p class="products__text">
+            Fragrant invigorating drink created from 100% natural ingredients without the use of
+            preservatives and flavor enhancers
+          </p>
+          <button class="products__button" type="button" products-data-modal-open>
+            <svg width="40" height="16">
+              <use href="./images/icons-ice_cream.svg#icon-Arrow"></use>
+            </svg>
+          </button>
+        </div>
+      </li>
+      <li class="products__item products__item--milkshakes">
+        <div class="milkshakes">
+          <picture>
+            <img
+              class="milkshakes_img"
+              alt="milkshake"
+              src="./images/products/milkshakes_mobile@1x.png"
+            />
+            <source
+              srcset="
+                ./images/products/milkshakes_mobile@1x.png 1x,
+                ./images/products/milkshakes_mobile@2x.png 2x
+              "
+              media="(min-width:480px)"
+            />
+            <source
+              srcset="
+                ./images/products/milkshakes_tablet@1x.png 1x,
+                ./images/products/milkshakes_tablet@2x.png 2x
+              "
+              media="(min-width:768px)"
+            />
+            <source
+              srcset="
+                ./images/products/milkshakes_desktop@1x.png 1x,
+                ./images/products/milkshakes_desktop@2x.png 2x
+              "
+              media="(min-width:1200px)"
+            />
+          </picture>
+        </div>
+        <h3 class="products__name">milkshakes</h3>
+        <div class="products__flex-container">
+          <p class="products__text">
+            Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and
+            other sweets of your choice
+          </p>
+          <button class="products__button" type="button" products-data-modal-open>
+            <svg width="40" height="16">
+              <use href="./images/icons-ice_cream.svg#icon-Arrow"></use>
+            </svg>
+          </button>
+        </div>
+      </li>
+    </ul>
   </div>
 </section>
 
 <!--modal-->
 <div class="backdrop products-is-hidden" products-data-modal>
-<div class="products-modal">
+  <div class="products-modal">
     <button class="products-modal__close" products-data-modal-close>
       <svg class="close-icon" width="11" height="11">
         <use href="./images/icons-ice_cream.svg#icon-icon-close"></use>
       </svg>
     </button>
     <p class="products-modal__title">Chololate icecream</p>
-    <img class="products-modal__img" alt="gałka lodów czekoladowych" src="./images/products/products-modal@1x.png"/>
-<div>
-<ul class="value">
-      <li class="value__item">
-        <div class="value__roundborder">
-          <span class="value__number">320</span>
-          <div><span class="value__legend">kcal</span></div>
-        </div>
-      </li>
-      <li class="value__item">
-        <div class="value__roundborder">
-          <span class="value__number">4g</span>
-          <div><span class="value__legend">Prote...</span></div>
-        </div>
-      </li>
-      <li class="value__item">
-        <div class="value__roundborder">
-          <span class="value__number">8,2g</span>
-          <div><span class="value__legend">Fats</span></div>
-        </div>
-      </li>
-      <li class="value__item">
-        <div class="value__roundborder">
-          <span class="value__number">40,4g</span>
-          <div><span class="value__legend">Carbs</span></div>
-        </div>
-      </li>
-    </ul>
-    <p class="ingredients">Ingredients</p>
-    <div class="ingredients__box">
-  <div class="ingredients__item"><span>Milk</span><span>100ml</span></div>
-      <div class="ingredients__item"><span>Belgian chocolate</span><span>20g</span></div>
-      <div class="ingredients__item"><span>Cream</span><span>150ml</span></div>
-      <div class="ingredients__item"><span>Cocoa powder</span><span>30g</span></div>
-      <div class="ingredients__item"><span>Sugar</span><span>40g</span></div>
-      <div class="ingredients__item"><span>Vanilla sugar</span><span>10g</span></div>
-  </div>
-    
-    <form action="javascript:void(0);" method="POST"></form>
-    <form class="products-modal__form">
-          <input class="products-modal__input" type="text" name="name" id="user-name" placeholder="Name"required />
-          <input class="products-modal__input" type="tel" name="phone" id="user=phone" placeholder="Phone"required />
+    <img
+      class="products-modal__img"
+      alt="gałka lodów czekoladowych"
+      src="./images/products/products-modal@1x.png"
+    />
+    <div>
+      <ul class="value">
+        <li class="value__item">
+          <div class="value__roundborder">
+            <span class="value__number">320</span>
+            <div><span class="value__legend">kcal</span></div>
+          </div>
+        </li>
+        <li class="value__item">
+          <div class="value__roundborder">
+            <span class="value__number">4g</span>
+            <div><span class="value__legend">Prote...</span></div>
+          </div>
+        </li>
+        <li class="value__item">
+          <div class="value__roundborder">
+            <span class="value__number">8,2g</span>
+            <div><span class="value__legend">Fats</span></div>
+          </div>
+        </li>
+        <li class="value__item">
+          <div class="value__roundborder">
+            <span class="value__number">40,4g</span>
+            <div><span class="value__legend">Carbs</span></div>
+          </div>
+        </li>
+      </ul>
+      <p class="ingredients">Ingredients</p>
+      <div class="ingredients__box">
+        <div class="ingredients__item"><span>Milk</span><span>100ml</span></div>
+        <div class="ingredients__item"><span>Belgian chocolate</span><span>20g</span></div>
+        <div class="ingredients__item"><span>Cream</span><span>150ml</span></div>
+        <div class="ingredients__item"><span>Cocoa powder</span><span>30g</span></div>
+        <div class="ingredients__item"><span>Sugar</span><span>40g</span></div>
+        <div class="ingredients__item"><span>Vanilla sugar</span><span>10g</span></div>
+      </div>
+
+      <form action="javascript:void(0);" method="POST"></form>
+      <form class="products-modal__form">
+        <input
+          class="products-modal__input"
+          type="text"
+          name="name"
+          id="user-name"
+          placeholder="Name"
+          required
+        />
+        <input
+          class="products-modal__input"
+          type="tel"
+          name="phone"
+          id="user=phone"
+          placeholder="Phone"
+          required
+        />
 
         <textarea
           class="products-modal__feedback"
@@ -119,9 +215,8 @@
           id="user-feedback"
           placeholder="Comment"
         ></textarea>
-      </label>
-      <button class="products-modal__button" type="submit">Submit</button>
-    </form>
+        <button class="products-modal__button" type="submit">Submit</button>
+      </form>
+    </div>
   </div>
-</div>
 </div>
