--- a/src/sass/partials/_products.scss
+++ b/src/sass/partials/_products.scss
@@ -34,106 +34,114 @@ ul {
       (min-resolution: 2dppx) {
       background-image: url(../images/Background_tablet@2x.jpg);
     }
+  }
+  @include desktop {
+    background-image: url(../images/Backgroud_desktop@1x.jpg);
+    @media (min-device-pixel-ratio: 2),
+      (-webkit-min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: url(../images/Backgroud_desktop@2x.jpg);
+    }
+  }
+  &__label {
+    color: #131313;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 800;
+    font-size: 18px;
+    line-height: 1.2;
+    text-transform: uppercase;
+    text-align: center;
+    padding-top: 60px;
+    margin: 0;
+    @include tablet {
+      font-size: 22px;
+    }
     @include desktop {
-      background-image: url(../images/Backgroud_desktop@1x.jpg);
-      @media (min-device-pixel-ratio: 2),
-        (-webkit-min-device-pixel-ratio: 2),
-        (min-resolution: 192dpi),
-        (min-resolution: 2dppx) {
-        background-image: url(../images/Backgroud_desktop@2x.jpg);
-      }
-    }
-    &__label {
-      color: #131313;
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 800;
-      font-size: 18px;
-      line-height: 1.2;
-      text-transform: uppercase;
-      text-align: center;
-      padding-top: 60px;
-      margin: 0;
-      @include tablet {
-        font-size: 22px;
-      }
-      @include desktop {
-        font-size: 30px;
-      }
-    }
-    &__title {
-      color: $textBlack;
-      font-family: 'Seymour One', sans-serif;
-      font-weight: 400;
       font-size: 30px;
-      line-height: 1.26;
-      text-transform: uppercase;
-      text-align: center;
-      margin-top: 12px;
-      @include tablet {
-        font-size: 34px;
-      }
-      @include desktop {
-        font-size: 36px;
-      }
     }
-    &__list {
-      @include tablet {
-        display: flex;
-        gap: 16px;
-      }
-      @include desktop {
-        display: flex;
-        gap: 29px;
-      }
+  }
+  &__title {
+    color: $textBlack;
+    font-family: 'Seymour One', sans-serif;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 1.26;
+    text-transform: uppercase;
+    text-align: center;
+    margin-top: 12px;
+    @include tablet {
+      font-size: 34px;
     }
-    &__name {
-      color: $textBlack;
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 700;
-      font-size: 20px;
-      line-height: 1.22;
-      text-transform: uppercase;
-      text-align: center;
-      margin-top: 123px;
-
-      @include tablet {
-        font-size: 22px;
-        margin-top: 108px;
-      }
-      @include desktop {
-        font-size: 30px;
-        margin-top: 165px;
-      }
+    @include desktop {
+      font-size: 36px;
     }
-    &__text {
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 400;
-      font-size: 14px;
-      line-height: 1.77;
-      letter-spacing: 0.04em;
-      width: 200px;
-      text-align: center;
-      margin-top: 40px;
-      @include desktop {
-        font-size: 16px;
-        margin-top: 66px;
-        width: 242px;
-        margin: 0 auto;
-      }
-      @include tablet {
-        width: 172px;
-        margin: 0 auto;
-      }
-    }
-
-    &__button {
-      background: none;
-      border: none;
-      margin: 0 auto;
+  }
+  &__list {
+    @include tablet {
       display: flex;
-      align-items: flex-end;
-      cursor: pointer;
+      gap: 16px;
     }
+    @include desktop {
+      display: flex;
+      gap: 29px;
+    }
+  }
+  &__name {
+    color: $textBlack;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.22;
+    text-transform: uppercase;
+    text-align: center;
+    padding-top: 123px;
+
+    @include tablet {
+      font-size: 22px;
+      padding-top: 108px;
+    }
+    @include desktop {
+      font-size: 30px;
+      padding-top: 135px;
+    }
+  }
+  &__text {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.77;
+    letter-spacing: 0.04em;
+    width: 200px;
+    text-align: center;
+    margin: 0 auto;
+    @include desktop {
+      font-size: 16px;
+      width: 242px;
+    }
+    @include tablet {
+      width: 172px;
+    }
+  }
+  &__flex-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 56%;
+    @include tablet {
+      height: 65%;
+    }
+    @include desktop {
+      height: 55%;
+    }
+  }
+  &__button {
+    background: none;
+    border: none;
+    margin: 0 auto;
+    display: flex;
+    align-items: flex-end;
+    cursor: pointer;
   }
 }
 .products__item {
@@ -185,7 +193,7 @@ ul {
   height: 200px;
   position: absolute;
   border-radius: 50%;
-  top: 11px;
+  top: 16px;
   z-index: -10;
   box-shadow: 0 8px 30px rgba(10, 136, 23, 0.25);
   background-image: linear-gradient(rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7));
@@ -209,6 +217,12 @@ ul {
   z-index: -10;
   box-shadow: 0 8px 30px rgba(153, 114, 23, 0.25);
   background-image: linear-gradient(rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7));
+  @include tablet {
+    top: 12px;
+  }
+  @include desktop {
+    top: 16px;
+  }
 }
 .milkshakes {
   @extend .ice-cream;
@@ -223,6 +237,12 @@ ul {
   z-index: -10;
   box-shadow: 0 8px 30px rgba(0, 0, 0, 0.25);
   background-image: linear-gradient(rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7));
+  @include tablet {
+    top: 12px;
+  }
+  @include desktop {
+    top: 16px;
+  }
 }
 .backdrop {
   position: fixed;
@@ -234,6 +254,7 @@ ul {
 }
 .products-modal {
   position: relative;
+  z-index: -9999;
   margin: auto;
   background-color: $textWhite;
   border: 2px solid $secondaryBrandColor;
