--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -4,17 +4,26 @@
       <li class="contacts__item">
         <button class="contacts__header">cafe</button>
         <address class="address">
-            <span class="address__header">Chicago</span>
-            <p class="address"></p>
+            <span class="address__header">Chicago</span><br />
+            <a class="address__link" href="https://goo.gl/maps/STne4sjAjZ7zSHTR6">10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA</a>
         </address>
 
       </li>
       <li class="contacts__item">
-        <button class="contacts__header">foodtrack</button>
+        <button class="contacts__header">foodtrack</button><address class="address">
+            <span class="address__header">Los Angeles</span><br />
+            <a class="address__link" href="https://goo.gl/maps/VBDssGxzNaqiNqQP7">1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</a>
+        </address>
+
 
       </li>
       <li class="contacts__item">
         <button class="contacts__header">cafe</button>
+        <address class="address">
+            <span class="address__header">New York</span><br />
+            <a class="address__link" href="https://goo.gl/maps/vRBaTHnEo7QvAA4T8">726 Sterling Pl, Brooklyn, NY 11222, USA</a>
+        </address>
+
       </li>
    </ul>
 
@@ -73,6 +82,7 @@
         ></textarea>
         </label>    
           <button type="button" class="modalSignup__button">Signup</button>
+          
 
     </form>
    </div>
