--- a/src/sass/partials/_contacts.scss
+++ b/src/sass/partials/_contacts.scss
@@ -1,6 +1,18 @@
 @import '../mixins';
 @import './vars';
+.container {
+  max-width: 480px;
+  margin: 0 auto;
+  padding: 0 15px;
+  width: 100%;
 
+  @include tablet {
+    max-width: 768px;
+  }
+  @include desktop {
+    max-width: 1200px;
+  }
+}
 .contacts {
   background-color: #84a178;
   list-style: none;
@@ -20,17 +32,19 @@
     display: block;
     background-color: #f8d24e;
     border-radius: 6px;
-    margin-left: 40px;
-    margin-top: 40px;
+    border: none;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.2;
     letter-spacing: 0.04em;
     text-transform: uppercase;
+    padding: 4px 22px;
+    margin-bottom: 20px;
 
     @include tablet {
       padding: 4px 13px;
       font-size: 16px;
+      margin-bottom: 32px;
     }
     @include desktop {
       padding: 4px 14px;
@@ -59,17 +73,38 @@
     height: 412px;
     border-radius: 10px;
     background-color: #fcfcfc;
+    padding: 40px 32px;
 
     @include tablet {
       width: 224px;
       height: 537px;
+      padding: 40px 24px;
     }
     @include desktop {
       width: 368px;
       height: 542px;
+      padding: 40px 40px;
     }
   }
 }
+.address {
+  width: 190px;
+  height: 70px;
+
+  &__header {
+    font-family: Montserrat;
+    font-size: 12px;
+    line-height: 1.86;
+    letter-spacing: 0.04em;
+    font-weight: 700;
+  }
+  &__link {
+    font-size: 12px;
+    color: #d6936d;
+    text-decoration: none;
+  }
+}
+
 .modalSignup__form {
   position: absolute;
   width: calc(100% - 30px);
