--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -32,6 +32,7 @@
     <li><button class="button">Franchise ></button></li>
 
     </ul> -->
+<div class="container contacts__wrapper">
 
 
 <ul class="contacts-bts__list">
@@ -40,7 +41,7 @@
 
     </ul>
 
-
+</div>
 
 <div class="backdrop is-hidden" data-modal>
   <div class="modalMap">
