--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -6,7 +6,7 @@
         <address class="address">
             <span class="address__header">Chicago</span><br />
             <a class="address__link" href="https://goo.gl/maps/STne4sjAjZ7zSHTR6">10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA</a>
-        </address>
+        </address><div class="contacts__line"></div>
 
       </li>
       <li class="contacts__item">
@@ -14,6 +14,7 @@
             <span class="address__header">Los Angeles</span><br />
             <a class="address__link" href="https://goo.gl/maps/VBDssGxzNaqiNqQP7">1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</a>
         </address>
+        <div class="contacts__line"></div>
 
 
       </li>
@@ -22,7 +23,7 @@
         <address class="address">
             <span class="address__header">New York</span><br />
             <a class="address__link" href="https://goo.gl/maps/vRBaTHnEo7QvAA4T8">726 Sterling Pl, Brooklyn, NY 11222, USA</a>
-        </address>
+        </address><div class="contacts__line"></div>
 
       </li>
    </ul>
