--- a/src/sass/partials/_contacts.scss
+++ b/src/sass/partials/_contacts.scss
@@ -93,9 +93,29 @@
       padding: 40px 40px;
     }
   }
+  &__opening {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    padding: 0;
+    margin-bottom: 24px;
+  }
   &__line {
     width: 100%;
     border: 0.4 solid #e1e1e1;
+    margin-bottom: 24px;
+    text-align: left;
+  }
+  &__days {
+    font-size: 12px;
+    line-height: 1.86;
+    font-weight: 500;
+  }
+  &__hours {
+    font-size: 12px;
+    line-height: 1.86;
+    color: #ababab;
   }
 }
 .address {
