--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -7,6 +7,10 @@
             <span class="address__header">Chicago</span><br />
             <a class="address__link" href="https://goo.gl/maps/STne4sjAjZ7zSHTR6">10340 Ridgeland Ave, Chicago Ridge, IL 60415, USA</a>
         </address><div class="contacts__line"></div>
+         <ul class="contacts__opening">
+          <li class="contacts__days">Monday - Friday<br /><span class="contacts__hours">06:00 AM - 10:00 PM</span></li>
+          <li class="contacts__days">Saturday - Sunday<br /><span class="contacts__hours">08:00 AM - 16:00 PM</span></li>
+        </ul>
 
       </li>
       <li class="contacts__item">
@@ -15,6 +19,10 @@
             <a class="address__link" href="https://goo.gl/maps/VBDssGxzNaqiNqQP7">1003 Manhattan Ave, Manhattan Beach, CA 90263, USA</a>
         </address>
         <div class="contacts__line"></div>
+         <ul class="contacts__opening">
+          <li class="contacts__days">Monday - Friday<br /><span class="contacts__hours">06:00 AM - 10:00 PM</span></li>
+          <li class="contacts__days">Saturday - Sunday<br /><span class="contacts__hours">08:00 AM - 16:00 PM</span></li>
+        </ul>
 
 
       </li>
@@ -24,8 +32,12 @@
             <span class="address__header">New York</span><br />
             <a class="address__link" href="https://goo.gl/maps/vRBaTHnEo7QvAA4T8">726 Sterling Pl, Brooklyn, NY 11222, USA</a>
         </address><div class="contacts__line"></div>
-
-      </li>
+        <ul class="contacts__opening">
+          <li class="contacts__days">Monday - Friday<br /><span class="contacts__hours">06:00 AM - 10:00 PM</span></li>
+          <li class="contacts__days">Saturday - Sunday<br /><span class="contacts__hours">08:00 AM - 16:00 PM</span></li>
+        </ul>
+        <div class="contacts__line"></div>
+        </li>
    </ul>
 
     <!-- <ul class="contacts-bts__list">
