--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -84,7 +84,7 @@
             Fragrant invigorating drink created from 100% natural ingredients without the use of
             preservatives and flavor enhancers
           </p>
-          <button class="products__button" type="button" products-data-modal-open>
+          <button class="products__button" type="button">
             <svg width="40" height="16">
               <use href="./images/icons-ice_cream.svg#icon-Arrow"></use>
             </svg>
@@ -128,7 +128,7 @@
             Sweet drinks based on milk and ice cream, supplemented with syrups, fruits, berries and
             other sweets of your choice
           </p>
-          <button class="products__button" type="button" products-data-modal-open>
+          <button class="products__button" type="button">
             <svg width="40" height="16">
               <use href="./images/icons-ice_cream.svg#icon-Arrow"></use>
             </svg>
