--- a/src/partials/review.html
+++ b/src/partials/review.html
@@ -1,43 +1,45 @@
-<div class="swiper">
-  <!-- Additional required wrapper -->
-  <div class="swiper-wrapper">
-    <!-- Slides -->
+<div class="container">
+  <div class="swiper">
+    <!-- Additional required wrapper -->
+    <div class="swiper-wrapper">
+      <!-- Slides -->
 
-    <div class="swiper-slide">
-      <img class="review__pic" src="./images/clients/panifront.jpg" alt="pani z frontu" />
-      <span class="review__opinion">
-        I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In
-        addition, you have beautiful serving, cozy atmosphere and polite staff</span
-      >
-      <span class="review__name">Emily, Los Angeles</span>
+      <div class="swiper-slide">
+        <img class="review__pic" src="./images/clients/panifront.jpg" alt="pani z frontu" />
+        <span class="review__opinion">
+          I love visiting your cafe. You prepare the most delicious ice cream in Los Angeles! In
+          addition, you have beautiful serving, cozy atmosphere and polite staff</span
+        >
+        <span class="review__name">Emily, Los Angeles</span>
+      </div>
+
+      <div class="swiper-slide">
+        <img class="review__pic" src="./images/clients/pani2.jpg" alt="pani druga" />
+        <span class="review__opinion"
+          >Ice cream is my passion! I love your chocolate hazelnut ice cream! And I really like the
+          excellent service - always served politely and quickly!
+        </span>
+        <span class="review__name">Diana, Chicago</span>
+      </div>
+
+      <div class="swiper-slide">
+        <img class="review__pic" src="./images/clients/pan.jpg" alt="pani w czapce" />
+        <span class="review__opinion"
+          >Every day we come to you with friends after classes in college. We love your ice cream
+          and casual atmosphere!
+        </span>
+        <span class="review__name">Bryan, New-York</span>
+      </div>
     </div>
 
-    <div class="swiper-slide">
-      <img class="review__pic" src="./images/clients/pani2.jpg" alt="pani druga" />
-      <span class="review__opinion"
-        >Ice cream is my passion! I love your chocolate hazelnut ice cream! And I really like the
-        excellent service - always served politely and quickly!
-      </span>
-      <span class="review__name">Diana, Chicago</span>
-    </div>
+    <!-- If we need pagination -->
+    <div class="swiper-pagination"></div>
 
-    <div class="swiper-slide">
-      <img class="review__pic" src="./images/clients/pan.jpg" alt="pani w czapce" />
-      <span class="review__opinion"
-        >Every day we come to you with friends after classes in college. We love your ice cream and
-        casual atmosphere!
-      </span>
-      <span class="review__name">Bryan, New-York</span>
-    </div>
-  </div>
-
-  <!-- If we need pagination -->
-  <div class="swiper-pagination"></div>
-
-  <!-- If we need navigation buttons -->
-  <!--<div class="swiper-button-prev"></div>
+    <!-- If we need navigation buttons -->
+    <!--<div class="swiper-button-prev"></div>
   <div class="swiper-button-next"></div>-->
 
-  <!-- If we need scrollbar -->
-  <!--<div class="swiper-scrollbar"></div>-->
+    <!-- If we need scrollbar -->
+    <!--<div class="swiper-scrollbar"></div>-->
+  </div>
 </div>
